--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@
 title: Rabin's Quill
 email: rabingaire20@gmail.com
 description: I am a Programmer.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://localhost:4000" # the base hostname & protocol for your site
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "http://rabingaire.me" # the base hostname & protocol for your site
 favicon: "/favicon.ico"
 
 # Build settings
