comment box added

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Rabin's Quill
 email: rabingaire20@gmail.com
 description: I am a Programmer.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://rabingaire.me" # the base hostname & protocol for your site
 favicon: "/favicon.ico"
 
