--- a/_config.yml
+++ b/_config.yml
@@ -15,11 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 title: Rabin's Quill
 email: rabingaire20@gmail.com
-description: I am a Programmer.
+description: Hello Welcome I am Rabin Gaire from Nepal, Land of Mountains and a birthplace of lord buddha. I love programming. I am a rails developer. I also love JavaScript. I am familiar with react.js . Taking about a hobby I love to write about stuff (That's why this blog exists).
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://rabingaire.me" # the base hostname & protocol for your site
+url: "https://rabingaire.me" # the base hostname & protocol for your site
 author: Rabin Gaire
-favicon: "/favicon.ico"
+favicon: "./favicon.ico"
 
 twitter:
   username: rabin_gaire
